# lcp55s69-282-bsp

./: .gitignore  LPCXpresso55S69_manifest_v3_6.xml  SW-Content-Register.txt  meson.build
boards/lpcxpresso55s69/demo_apps/hello_world/cm33_core0/: hello_world.c  pin_mux.c
boards/lpcxpresso55s69/demo_apps/hello_world_swo/cm33_core0/: hello_world_swo.c  pin_mux.c
boards/lpcxpresso55s69/demo_apps/hello_world_virtual_com/cm33_core0/: hello_world.c  pin_mux.c
boards/lpcxpresso55s69/demo_apps/led_blinky/cm33_core0/: led_blinky.c  pin_mux.c
boards/lpcxpresso55s69/demo_apps/power_manager_lpc/cm33_core0/: pin_mux.c  power_manager_lpc.c
boards/lpcxpresso55s69/demo_apps/puf_hashcrypt_crypto/cm33_core0/: pin_mux.c  puf_hashcrypt_crypto.c
boards/lpcxpresso55s69/demo_apps/shell/cm33_core0/: pin_mux.c  shell.c
boards/lpcxpresso55s69/demo_apps/utick_wakeup/cm33_core0/: pin_mux.c  utick_wakeup.c
boards/lpcxpresso55s69/multicore_examples/freertos_message_buffers/cm33_core0/: main_master.c
boards/lpcxpresso55s69/multicore_examples/freertos_message_buffers/cm33_core1/: clock_config.c  main_remote.c  pin_mux.c
boards/lpcxpresso55s69/multicore_examples/hello_world/cm33_core0/: board.c  hello_world_core0.c  pin_mux.c
boards/lpcxpresso55s69/multicore_examples/hello_world/cm33_core1/: clock_config.c  hello_world_core1.c
boards/lpcxpresso55s69/multicore_examples/rpmsg_lite_pingpong_rtos/cm33_core0/: main_master.c
boards/lpcxpresso55s69/multicore_examples/rpmsg_lite_pingpong_rtos/cm33_core1/: main_remote.c
boards/lpcxpresso55s69/multicore_examples/rpmsg_lite_pingpong_tzm/cm33_core0/ns/: main_master_tzm_ns.c  pin_mux.c
boards/lpcxpresso55s69/multicore_examples/rpmsg_lite_pingpong_tzm/cm33_core0/s/: main_master_tzm_s.c  tzm_config.c
components/button/: button.c  button.h
components/codec/: fsl_codec_common.c  fsl_codec_common.h
components/codec/cs42888/: fsl_cs42888.c  fsl_cs42888.h
components/codec/da7212/: fsl_dialog7212.c  fsl_dialog7212.h
components/codec/i2c/: fsl_codec_i2c.c  fsl_codec_i2c.h
components/codec/port/: fsl_codec_adapter.c  fsl_codec_adapter.h  fsl_cs42888_adapter.c  fsl_cs42888_adapter.h  fsl_da7212_adapter.c  fsl_da7212_adapter.h  fsl_sgtl_adapter.c  fsl_sgtl_adapter.h  fsl_wm8904_adapter.c  fsl_wm8904_adapter.h  fsl_wm8960_adapter.c  fsl_wm8960_adapter.h
components/codec/port/cs42888/: fsl_codec_adapter.c  fsl_codec_adapter.h
components/codec/port/da7212/: fsl_codec_adapter.c  fsl_codec_adapter.h
components/codec/port/sgtl5000/: fsl_codec_adapter.c  fsl_codec_adapter.h
components/codec/port/wm8904/: fsl_codec_adapter.c  fsl_codec_adapter.h
components/codec/port/wm8960/: fsl_codec_adapter.c  fsl_codec_adapter.h
components/codec/sgtl5000/: fsl_sgtl5000.c  fsl_sgtl5000.h
components/codec/wm8904/: fsl_wm8904.c  fsl_wm8904.h
components/codec/wm8960/: fsl_wm8960.c  fsl_wm8960.h
components/common_task/: common_task.c  common_task.h
components/crc/: crc.h  lpc_crc_adapter.c  software_crc_adapter.c
components/ft6x06/: fsl_ft6x06.c  fsl_ft6x06.h
components/gpio/: gint_adapter.c  gpio.h  lpc_gpio_adapter.c
components/i2c/: flexcomm_i2c_adapter.c  i2c.h
components/ili9341/: fsl_ili9341.c
components/led/: led.c  led.h
components/lists/: generic_list.c  generic_list.h
components/mem_manager/: mem_manager.c  mem_manager.h
components/mma8652fc/: fsl_mma.c  fsl_mma.h
components/osa/: fsl_os_abstraction.h  fsl_os_abstraction_bm.c  fsl_os_abstraction_config.h  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_free_rtos.h
components/panic/: panic.c  panic.h
components/pwm/: pwm.h  pwm_ctimer_adapter.c
components/serial_manager/: serial_manager.c  serial_manager.h  serial_port_internal.h  serial_port_swo.c  serial_port_swo.h  serial_port_uart.c  serial_port_uart.h  serial_port_usb.c  serial_port_usb.h
components/serial_manager/usb_cdc_adapter/: usb_device_descriptor.c  usb_device_descriptor.h
components/timer/: ctimer_adapter.c  mrt_adapter.c  timer.h
components/timer_manager/: timer_manager.c  timer_manager.h
components/uart/: uart.h  usart_adapter.c
middleware/fatfs/documents/res/: app1.c  app2.c  app3.c  app4.c  app5.c  app6.c
middleware/fatfs/source/: diskio.c  diskio.h  ff.c  ff.h  ffconf_template.h  ffsystem.c  ffunicode.c
middleware/fatfs/source/fsl_mmc_disk/: fsl_mmc_disk.c  fsl_mmc_disk.h
middleware/fatfs/source/fsl_ram_disk/: fsl_ram_disk.c  fsl_ram_disk.h
middleware/fatfs/source/fsl_sd_disk/: fsl_sd_disk.c  fsl_sd_disk.h
middleware/fatfs/source/fsl_usb_disk/: fsl_usb_disk.h  fsl_usb_disk_bm.c  fsl_usb_disk_freertos.c
middleware/fatfs/template/: ffconf.h
middleware/usb/device/: usb_device.h  usb_device_dci.c  usb_device_dci.h  usb_device_lpcip3511.c  usb_device_lpcip3511.h
middleware/usb/host/: usb_host.h  usb_host_devices.c  usb_host_devices.h  usb_host_framework.c  usb_host_framework.h  usb_host_hci.c  usb_host_hci.h  usb_host_ip3516hs.c  usb_host_ip3516hs.h  usb_host_ohci.c  usb_host_ohci.h
middleware/usb/host/class/: usb_host_audio.c  usb_host_audio.h  usb_host_cdc.c  usb_host_cdc.h  usb_host_cdc_rndis.c  usb_host_cdc_rndis.h  usb_host_hid.c  usb_host_hid.h  usb_host_hub.c  usb_host_hub.h  usb_host_hub_app.c  usb_host_hub_app.h  usb_host_msd.c  usb_host_msd.h  usb_host_msd_ufi.c  usb_host_phdc.c  usb_host_phdc.h  usb_host_printer.c  usb_host_printer.h  usb_host_video.c  usb_host_video.h
middleware/usb/include/: usb.h  usb_misc.h  usb_spec.h
middleware/usb/output/npw/device_config/ip3511fs/: usb_device_config.h
middleware/usb/output/npw/device_config/ip3511hs/: usb_device_config.h
middleware/usb/output/npw/host_config/ip3516hs/: usb_host_config.h
middleware/usb/output/source/device/: usb_device_ch9.c  usb_device_ch9.h
middleware/usb/phy/: usb_phy.c  usb_phy.h
rtos/freertos/freertos_kernel/: croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
rtos/freertos/freertos_kernel/portable/Common/: mpu_wrappers.c
rtos/freertos/freertos_kernel/portable/MemMang/: heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c  heap_useNewlib.c
(+34 files in other folders)
